carousel bottom clipping fix

--- a/styles/scss/VideoCarousel.scss
+++ b/styles/scss/VideoCarousel.scss
@@ -2,7 +2,7 @@
   padding: 5rem;
   padding-bottom: 10rem;
   margin-top: 10rem;
-  max-width: 100vw;
+  min-width: 100vw;
   overflow: hidden;
 
   @media screen and (max-width: 800px) {
